[package]
name = "winky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.1", features = ["rt-multi-thread", "macros", "sync"] }
winapi = { version = "0.3.9", features = ["winuser"] }