[package]
name = "winky"
version = "0.1.0"
edition = "2021"
description = "A windows+tokio keyboard event emitter and listener module"
readme = "Readme.md"
homepage = "https://github.com/glenmurphy/winky/"
repository = "https://github.com/glenmurphy/winky/"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.1", features = ["rt-multi-thread", "macros", "sync"] }
winapi = { version = "0.3.9", features = ["winuser"] }